...
            addData()
        }
    }

        
    func addData() {
        divisions.append(DivisionFactory.createDivision(code: "vBY-1", of: 7))
        divisions.append(DivisionFactory.createDivision(code: "vCZ-1", of: 7))
        divisions.append(DivisionFactory.createDivision(code: "vCW-1", of: 7))
    }

}

...
