...
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Csx-M7-bfE">
                                <rect key="frame" x="20" y="20" width="93" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="cycleCarButton"/>
                                <state key="normal" title="Cycle Car"/>
                                <connections>
                                    <action selector="cycleCars:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eW2-O3-pQb"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tires Package (Cost: 500)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oaY-9f-qZi">
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="J1R-hO-SHE">
                                <rect key="frame" x="578" y="298" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="drivetrainSwitch"/>
                                <connections>
                                    <action selector="drivetrainPackageToggle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DSB-Gf-x9W"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Engine &amp; Exhaust Package (Cost: 500)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GgF-sF-VPJ">
                                <rect key="frame" x="18" y="150" width="295" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ymE-YZ-VoY">
                                <rect key="frame" x="578" y="196" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="tiresSwitch"/>
                                <connections>
                                    <action selector="tiresPackageToggle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="v6j-u5-8Fq"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fuel System Package (Cost: 500)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uYG-Bg-k5b">
                                <rect key="frame" x="18" y="252" width="255" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Gdc-jX-ODy">
                                <rect key="frame" x="578" y="145" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="engineExhaustSwitch"/>
                                <connections>
                                    <action selector="engineAndExhaustToggle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9wB-O5-tiw"/>
                                </connections>
                            </switch>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="TL9-CA-BWh">
                                <rect key="frame" x="578" y="247" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="fuelSystemSwitch"/>
                                <connections>
                                    <action selector="fuelSystemPackageToggle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oDX-0e-Bn4"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remaining Funds" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M9N-P1-jqJ">
                                <rect key="frame" x="475" y="361" width="131.5" height="20.5"/>
...
