...
                                <rect key="frame" x="170" y="500" width="75" height="74"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="zero"/>
                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                <state key="normal" backgroundImage="0.square" catalog="system"/>
...
                                <rect key="frame" x="170" y="199.5" width="75" height="74"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="eight"/>
                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                <state key="normal" backgroundImage="8.square" catalog="system"/>
...
                                <rect key="frame" x="70" y="200" width="75" height="74"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="seven"/>
                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                <state key="normal" backgroundImage="7.square" catalog="system"/>
...
                                <rect key="frame" x="170" y="300" width="75" height="74"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="five"/>
                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                <state key="normal" backgroundImage="5.square" catalog="system"/>
...
                                <rect key="frame" x="170" y="400" width="75" height="74"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="two"/>
                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                <state key="normal" backgroundImage="2.square" catalog="system"/>
...
                                <rect key="frame" x="270" y="400" width="75" height="74"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="three"/>
                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                <state key="normal" backgroundImage="3.square" catalog="system"/>
...
                                <rect key="frame" x="70" y="400" width="75" height="74"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="one"/>
                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                <state key="normal" backgroundImage="1.square" catalog="system"/>
...
                                <rect key="frame" x="270" y="700" width="75" height="74"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="divide"/>
                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                <state key="normal" backgroundImage="divide.square" catalog="system"/>
...
                                <rect key="frame" x="205" y="700" width="75" height="74"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="multiply"/>
                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                <state key="normal" backgroundImage="multiply.square" catalog="system"/>
...
                                <rect key="frame" x="135" y="700" width="75" height="74"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="minus"/>
                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                <state key="normal" backgroundImage="minus.square" catalog="system"/>
...
                                <rect key="frame" x="70" y="700" width="75" height="74"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="plus"/>
                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                <state key="normal" backgroundImage="plus.square" catalog="system"/>
...
                                <rect key="frame" x="270" y="300" width="75" height="74"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="six"/>
                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                <state key="normal" backgroundImage="6.square" catalog="system"/>
...
                                <rect key="frame" x="70" y="300" width="75" height="74"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="four"/>
                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                <state key="normal" backgroundImage="4.square" catalog="system"/>
...
                                <rect key="frame" x="270" y="200" width="75" height="74"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="nine"/>
                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                <state key="normal" backgroundImage="9.square" catalog="system"/>
...
                                <rect key="frame" x="72" y="500" width="98" height="63"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="end"/>
                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                <state key="normal" title="EVAL"/>
...
                                <rect key="frame" x="265" y="500" width="78" height="63"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="clear"/>
